# super-git

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/super-git-cli/: Cargo.toml
crates/super-git-cli/src/: args.rs  main.rs  output.rs
crates/super-git-cli/tests/: config.rs  confirm_history_edit.rs  execute.rs  execute_history_edit.rs  inspect.rs  predict.rs  preview.rs  preview_history_edit.rs  preview_worktree.rs  preview_worktree_remove.rs  undo.rs  undo_history_edit.rs
crates/super-git-core/: Cargo.toml
crates/super-git-core/src/: error.rs  model.rs
crates/supergit-cli/: Cargo.toml
crates/supergit-cli/src/: args.rs  main.rs
crates/supergit-core/: Cargo.toml
crates/supergit-core/src/: error.rs  lib.rs  model.rs
docs/: README.md  architecture.md  command-reference.md  getting-started.md  roadmap.md  safety-model.md  setup.md
docs/adr/: 0001-cli-first.md
docs/archive/original-notes/: README.md
docs/contributing/: commit-messages.md
docs/internal/idea/: 2026-06-07-safe-branch-refresh.md
docs/internal/plans/: 2026-06-03-c3-e-inspect-guardrails.md  2026-06-03-c4-0-preview-execute-undo-contract.md  2026-06-03-public-docs-refresh.md  2026-06-06-global-config-and-saved-repositories.md  2026-06-07-c6-0-worktree-create-preview-contract.md  2026-06-07-c7-0-worktree-remove-preview-contract.md  2026-06-07-c7-c-worktree-remove-confirmation-contract.md  2026-06-10-c8-0-history-edit-preview-contract.md  (+3 more)
dual-brain/: gpt-5.5-pro-답변.md
research/: 도구별 특징 조사.md
research/아이디어/: worktree 관련.md  깃 로그 Graph Viewer.md
(+38 files in other folders)
