[package]
name = "super-git-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "super-git"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
super-git-core = { path = "../super-git-core" }

[dev-dependencies]
tempfile.workspace = true
